--- a/cookbooks/scripts/.kitchen.yml
+++ b/cookbooks/scripts/.kitchen.yml
@@ -17,5 +17,5 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[utils::default]
+      - recipe[scripts::default]
     attributes:
