--- a/cookbooks/apps/.kitchen.yml
+++ b/cookbooks/apps/.kitchen.yml
@@ -1,6 +1,8 @@
 ---
 driver:
   name: vagrant
+  network:
+    - ["private_network", {ip: "192.168.33.33"}]
 
 provisioner:
   name: chef_zero
@@ -12,10 +14,12 @@ provisioner:
 
 platforms:
   - name: ubuntu-14.04
-  - name: centos-7.1
+    driver:
+      customize:
+        memory: 512
 
 suites:
   - name: default
     run_list:
-      - recipe[apps::default]
+      - recipe[apps::btsync]
     attributes:
